--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,21 +15,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          sparse-checkout: launcher
-          sparse-checkout-cone-mode: false
-
-      - name: Move launcher contents to root
-        run: |
-          mv launcher/* .
-          mv launcher/.* . 2>/dev/null || true
-          rmdir launcher
-        shell: bash
 
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install Python dependencies
         run: |
@@ -68,21 +58,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          sparse-checkout: launcher
-          sparse-checkout-cone-mode: false
-
-      - name: Move launcher contents to root
-        run: |
-          mv launcher/* .
-          mv launcher/.* . 2>/dev/null || true
-          rmdir launcher
-        shell: bash
 
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install Python dependencies
         run: |
@@ -122,21 +102,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          sparse-checkout: launcher
-          sparse-checkout-cone-mode: false
-
-      - name: Move launcher contents to root
-        run: |
-          mv launcher/* .
-          mv launcher/.* . 2>/dev/null || true
-          rmdir launcher
-        shell: bash
 
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install Python dependencies
         run: |
@@ -183,21 +153,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          sparse-checkout: launcher
-          sparse-checkout-cone-mode: false
-
-      - name: Move launcher contents to root
-        run: |
-          mv launcher/* .
-          mv launcher/.* . 2>/dev/null || true
-          rmdir launcher
-        shell: bash
 
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install Python dependencies
         run: |
@@ -223,10 +183,10 @@ jobs:
 
       - name: Build
         run: dx bundle --release --platform desktop || {
-            echo "Bundle failed due to xattr issues, trying cargo build as fallback"
-            cargo build --release
-            mkdir -p target/release/bundle/macos
-            echo "Fallback build completed, but .app bundle not available"
+          echo "Bundle failed due to xattr issues, trying cargo build as fallback"
+          cargo build --release
+          mkdir -p target/release/bundle/macos
+          echo "Fallback build completed, but .app bundle not available"
           }
 
       - name: Upload macOS
