--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -49,9 +49,16 @@ jobs:
       - name: Install cargo-binstall
         shell: pwsh
         run: |
+          $BinDir = "$env:USERPROFILE\.cargo\bin"
+          if (!(Test-Path $BinDir)) { New-Item -ItemType Directory -Path $BinDir | Out-Null }
           iwr https://github.com/cargo-bins/cargo-binstall/releases/latest/download/cargo-binstall-x86_64-pc-windows-msvc.zip -OutFile binstall.zip
-          Expand-Archive binstall.zip -DestinationPath $env:USERPROFILE\.cargo\bin -Force
-          echo "$env:USERPROFILE\.cargo\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
+          Expand-Archive binstall.zip -DestinationPath $BinDir -Force
+          echo "$BinDir" | Out-File -FilePath $env:GITHUB_PATH -Append
+          Get-ChildItem $BinDir
+
+      - name: Check cargo-binstall
+        shell: pwsh
+        run: cargo binstall --version
 
       - name: Install dioxus-cli (prebuilt)
         shell: pwsh
@@ -125,9 +132,16 @@ jobs:
       - name: Install cargo-binstall
         shell: pwsh
         run: |
+          $BinDir = "$env:USERPROFILE\.cargo\bin"
+          if (!(Test-Path $BinDir)) { New-Item -ItemType Directory -Path $BinDir | Out-Null }
           iwr https://github.com/cargo-bins/cargo-binstall/releases/latest/download/cargo-binstall-x86_64-pc-windows-msvc.zip -OutFile binstall.zip
-          Expand-Archive binstall.zip -DestinationPath $env:USERPROFILE\.cargo\bin -Force
-          echo "$env:USERPROFILE\.cargo\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
+          Expand-Archive binstall.zip -DestinationPath $BinDir -Force
+          echo "$BinDir" | Out-File -FilePath $env:GITHUB_PATH -Append
+          Get-ChildItem $BinDir
+
+      - name: Check cargo-binstall
+        shell: pwsh
+        run: cargo binstall --version
 
       - name: Install Rust
         run: |
@@ -194,6 +208,10 @@ jobs:
         run: |
           curl -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binary.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+          ls -l $HOME/.cargo/bin
+
+      - name: Check cargo-binstall
+        run: cargo binstall --version
 
       - name: Install Rust
         run: rustup update stable
@@ -253,6 +271,10 @@ jobs:
         run: |
           curl -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binary.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+          ls -l $HOME/.cargo/bin
+
+      - name: Check cargo-binstall
+        run: cargo binstall --version
 
       - name: Install Rust
         run: rustup update stable
